# Chip-8-emulator

./: CHIP-8.h  CMakeLists.txt  CMakePresets.json  Chip-8.cpp  LICENSE  README.md
include/: AppEngine.h  AppState.h  Chip8.h  EmulatorState.h  Platform.h
src/: AppEngine.cpp  Chip8.cpp  EmulatorState.cpp  Platform.cpp  main.cpp
